# demos

./: .gitignore  .pre-commit-config.yaml  README.md  cache-demo.ipynb  docker-compose.yml  pyproject.toml
caching/: cache-demo.ipynb  docker-compose.yml
datasette/: datasette.ipynb
datetime-libs/: README.md  parse.py  parse_stdlib.py  tz.py  tz_whenever.py  unit_testing.py
ffsync/: .env.sample  Dockerfile  README.md  docker-compose.yml  init.sql  librefox.overrides.cfg  local.toml
fts/: README.md  fts.py  fts.sh  fts_basic.py  fts_basic.sh  fts_tui.py
