[project]
name = 'demos'
version = '0.0'
authors = [{ name = 'Jordan Cook' }]
requires-python = '>=3.10'
dependencies = [
    'attrs',
    'datasette',
    'pandas',
    'pillow',
    'platformdirs',
    'pyarrow',
    'python-dateutil',
    'pytimeparse',
    'pyyaml',
    'requests-cache>=1.2',
    'requests>=2.30',
    'rich',
    'tablib',
    'textual>=2.0',
    'time-machine',
    'ujson',
    'whenever',
]

[dependency-groups]
dev = [
    'ipdb',
    'ipython',
    'nox',
    'pre-commit',
    'pytest',
    'requests-mock',
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F', 'I']

[tool.ruff.lint.pycodestyle]
max-line-length = 120
