[project]
name = 'demos'
version = '0.0'
authors = [{ name = 'Jordan Cook' }]
requires-python = '>=3.10'
dependencies = [
    'attrs',
    'ipdb',
    'ipython',
    'pandas',
    'pillow',
    'platformdirs',
    'pyarrow',
    'python-dateutil',
    'pyyaml',
    'requests',
    'requests-cache',
    'rich',
    'tablib',
    'ujson',
]

[dependency-groups]
dev = [
    'nox>=2024.4',
    'pre-commit>=3.5',
    'requests-mock>=1.8',
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F', 'I']

[tool.ruff.lint.pycodestyle]
max-line-length = 120
